--- a/function_ex.html
+++ b/function_ex.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+   <script type="text/javascript" src="js/ex1.js"></script>
 </head>
 <body>
     <div class="container d-flex justify-conten align-items-center vh-100">
@@ -28,20 +30,88 @@
                         <button type="button" class="btn btn-danger me-2" onclick="sub()">-</button>
                         <button type="button" class="btn btn-danger me-2" onclick="multi()">*</button>
                         <button type="button" class="btn btn-danger me-2" onclick="div()">/</button>
-                        <button type="button" class="btn btn-secondary">Reset</button>
+                        <button type="button" class="btn btn-secondary me-2">Reset</button>
                     </div>
                     <div class="mb-3">
-                        <label for="res" class="form-label">Result</label>
+                        <label for="res" class="form-label">Result:</label>
                         <input type="number" name="res" class="form-control" disabled>
                     </div>
                 </form>
             </div>
 
         </div>
+        <script>
+          var a,b,result;
+
+          function add()
+          {
+            a=Number(document.myform.n1.value);           //1
+            b=Number(document.myform.n2.value);           //2
+            result=a+b;  //1+2;
+            document.myform.res.value=result.toFixed(3);  //3  point nntr value
+          }
+
+          function sub()
+          {
+            a=Number(document.myform.n1.value);            //1
+            b=Number(document.myform.n2.value);           //2
+            result=a-b;  //1+2;
+            document.myform.res.value=result.toFixed(3);  //3
+          }
+
+          function multi()
+          {   
+            a=Number(document.myform.n1.value);  //1
+            b=Number(document.myform.n2.value);  //2
+            result=a*b;  //1+2;
+            document.myform.res.value=result.toFixed(3);  //3
+          }
+
+          function sub()
+          {
+            a=Number(document.myform.n1.value);  //1
+            b=Number(document.myform.n2.value);  //2
+            result=a/b;                          //1+2;
+            document.myform.res.value=result.toFixed(3);  //3
+          }
+        </script>
     </div>
+  <!--calculator
+    <form>
+        <div class="container">
+          <div class="row">
+
+            <div class="col-md-3">
+
+              <label for="exampleFormControlInput1" class="form-label">Number 1</label>
+              <input type="ename" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="col-md-3">
+              <label for="exampleFormControlInput1" class="form-label">Number 2</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+
+
+            <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="exampleFormControlInput1" class="form-label">Nomber2 </label>
+                <input type="phone" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+
+              <div class="col-md-3">
+                <label for="exampleFormControlInput1" class="form-label">Select City...</label>
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>select City...</option>
+                  <option value="1">Pune</option>
+                  <option value="2">Mumbai</option>
+                  <option value="3">Delhi</option>
+                </select>
+              </div>-->
+
 </body>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
   </body>
 </html> 
