--- a/if_else_if.html
+++ b/if_else_if.html
@@ -7,15 +7,19 @@
 </head>
 <body>
     <script>
-        var per=50;
+        var per=prompt("Enter Your Marks"); 
+        per= parseInt(Per);
 
         if(per>=80 && per<=100){
             document.write("you are in destination");
-        }else if(per>=60 && per<80){
+        }
+        else if(per>=60 && per<80){
             document.write("you are in 1st class");
-        }else if(per>=40 && per<60){
+        }
+        else if(per>=40 && per<60){
               document.write("you are in 2nd class");
-        }else{
+        }
+        else{
             document.write("Fail");
         }
     </script>
