--- a/var_let_cont.html
+++ b/var_let_cont.html
@@ -37,23 +37,31 @@
             const z=3;  //block
             if (true)    //inside this block
             {  
-                var x=10;   //ression x(function scoped)
+                var x=10;   //reassion x(function scoped)
                 let y=20;   // y only for this block
                 const z=30;  //z only for this block
                 document.write(x);  //10
+                document.write("<br>");
                 document.write(y);  //20
+                document.write("<br>");
                 document.write(z);  //30
+                document.write("<br>"); // 10 20 30
+                document.write("<br>");
+            } //outside the block but inside the function
+                document.write(x);  //10
+                document.write("<br>");
+                document.write(y);  //2
+                document.write("<br>");
+                document.write(z);  //3
+                document.write("<br>");  // 10 2 3
                 document.write("<br>");
             }
-                document.write(x);
-                document.write(y);
-                document.write(z);
-                document.write("<br>");
-            }
-            //outside the block but inside the function
+            // call functoion
             scopeExample();
                 document.write(x);
+                document.write("<br>");
                 document.write(y);
+                document.write("<br>");
                 document.write(z);
     </script>
     
